# vecs2pauli

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: CMakeLists.txt  vecs2pauli_app.cpp
docs/: conf.py  doxyfile.in  index.rst  requirements.txt
docs/source/: cpp_vecs2pauli.rst  vecs2pauli.rst
examples/: example_logical_gates.py  example_lp_transformation.py  example_stabilizer_group.py  example_stabilizers_to_vectors.py  example_three_qubit_repetition_code.py
include/: vecs2pauli.hpp
python/vecs2pauli/: __init__.py  _vecs2pauli.cpp  converter.py  stabilizers2vectors.py  vecs2pauli.py
src/: CMakeLists.txt  vecs2pauli.cpp
tests/python/: test_converter.py  test_get_stabilisers.py
